--- a/src/views/Weather.scss
+++ b/src/views/Weather.scss
@@ -31,7 +31,8 @@ main {
   }
 
   .weather-stats {
-    font-style: italic;
+    font-size: 40px;
+    letter-spacing: 2px;
   }
 
   animation: fadeInAnimation ease 2s;
