--- a/src/components/InfoCard/InfoCard.scss
+++ b/src/components/InfoCard/InfoCard.scss
@@ -31,8 +31,8 @@
 
   .city-information {
     position: absolute;
-    top: 50px;
     padding: 20px;
+    width: auto;
   }
 
   .city-section {
@@ -43,7 +43,7 @@
     background-color: rgba($color: #000000, $alpha: 0.2);
     border-radius: 10px;
     padding: 3px;
-    width: 100%;
+    width: auto;
 
     svg {
       width: 40px;
@@ -68,12 +68,14 @@
     color: white;
     animation: slideIn ease 2s;
     animation-iteration-count: 1;
+    padding: 3px;
   }
 }
 
 .location-information {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   height: 100%;
   border: 2px solid black;
   border-radius: 10px;
